--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Context Protector - Privacy Content Replace Online</title>
-    <meta name="description" content="Replace sensitive data in your context before pasting it to ChatGPT, Claude, Gemini, or any other AI sites. All data stored locally in your browser." />
+    <title>AI API Visualizer</title>
+    <meta name="description" content="Visualize Request/Response of ChatGPT(Chat Completion)/Claude/Gemini API Online." />
   </head>
   <body>
     <div id="app"></div>
