restore Help.vue

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI API Visualizer</title>
-    <meta name="description" content="Visualize Request/Response of ChatGPT(Chat Completion)/Claude/Gemini API Online." />
+    <meta name="description" content="Visualize Request/Response body of ChatGPT(Chat Completion)/Claude/Gemini API Online." />
   </head>
   <body>
     <div id="app"></div>
